--- a/About.html
+++ b/About.html
@@ -3,12 +3,38 @@
     <head>
       <title>About</title>
     </head>
-    <body>
-      <h1>About</h1>    
-      <hr>
-
-
-    </body>
+        <body>
+          <header>
+            <h1>About</h1> 
+            <nav>
+              <ul>
+                <li>
+                 <a href="index.html"><h4>Home</h4></a>
+                </li>
+                <li>
+                  Blog
+                </li>
+                <li>
+                 <a href="About.html"><h4>About</h4></a>
+                </li>
+                <li>
+                  Photo's
+                </li>
+                <li>
+                  Shop
+                </li>
+              </ul>
+            </nav>
+          </header>
+          <main>
+            <hr>
+              <h4>Welkom en leuk dat je mijn site bezoekt</h4>
+              <img width="300" src="me.jpg" alt="Portretfoto">
+              <a href="https://www.google.com" target="_blank">Voor meer informatie klik hier</a>   
+          </main>
+          <footer>
+            <h5>&copy;2021 - CTC creations</h5>
+          </footer>
+        </body>
 
 </html>
-    
