--- a/About.html
+++ b/About.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html lang="nl-NL">
     <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
       <title>About</title>
     </head>
         <body>
           <header>
             <h1>About</h1> 
-            <nav>
-              <ul>
-                <li>
-                 <a href="index.html"><h4>Home</h4></a>
-                </li>
-                <li>
-                  Blog
-                </li>
-                <li>
-                 <a href="About.html"><h4>About</h4></a>
-                </li>
-                <li>
-                  Photo's
-                </li>
-                <li>
-                  Shop
-                </li>
-              </ul>
-            </nav>
           </header>
+          <nav class="orange-background">
+            <ul class="menu">
+              <li>
+                <a href="shop.html">
+                  <h4>Shop</h4>
+                </a>
+              </li>
+              <li>
+                <a href="gallery.html">
+                  <h4>Gallery</h4>
+                </a>
+              </li>
+              <li>
+                <a href="About.html">
+                  <h4>About</h4>
+                </a>
+              </li>
+              <li>
+                <a href="blog.html">
+                  <h4>Blog</h4>
+                </a>
+              </li>
+              <li>
+                <a href="index.html">
+                  <h4>Home</h4>
+                </a>
+              </li>     
+            </ul>
+          </nav>
           <main>
             <hr>
               <h4>Welkom en leuk dat je mijn site bezoekt</h4>
-              <img width="300" src="me.jpg" alt="Portretfoto">
+              <img class="portret" width="300" src="me.jpg" alt="Portretfoto">
               <a href="https://www.google.com" target="_blank">Voor meer informatie klik hier</a>   
           </main>
           <footer>
