--- a/index.html
+++ b/index.html
@@ -1,58 +1,76 @@
 <!DOCTYPE html>
 <html lang="nl-NL">
-       <head>
-         <title>My Vantures 2.0</title>
-       </head>
-       <body>
-         <header>
-          <h1>Out With The Old, In With The New</h1>
-           <nav>
-             <ul>
-               <li>
-                <a href="index.html"><h4>Home</h4></a>
-               </li>
-               <li>
-                 Blog
-               </li>
-               <li>
-                <a href="About.html"><h4>About</h4></a>
-               </li>
-               <li>
-                 Photo's
-               </li>
-               <li>
-                 Shop
-               </li>
-             </ul>
-           </nav>
-         </header>  
-         <hr>
-         <main>
-            <article>
-               <h2>Een nieuwe indeling na een jaar full-time wonen</h2>
-               <p>In juni was de bus af en is vanaf dat moment mijn huis en thuis, middenin de zomer dus perfect 
-                  om vanlife te ontdekken. In september trok ik een aantal weken door Spanje samen met een vriendin en 
-                  zeker toen, merkte ik dat ik mijn indeling toch niet helemaal ideaal vond.<br><br>
-                  Dit is waarom:
-                  <br>
-                    <ul>
-                      <li>Het vaste bed is ideaal als het gaat om gebruiksgemak, maar het neemt ook de helft van de ruimte in 
-                                beslag, waardoor je leefgedeelte erg klein is.</li>
-                      <li>Het blokkeerd licht en je uitzicht naar achter.</li>
-                      <li>Daarnaast had ik gedacht dat ik de ruimte onder het bed veel meer nodig zou hebben, maar het blijkt 
-                                dat ik helemaal niet zoveel spullen heb om daar op de bergen. De verhouding onder en boven het bed 
-                                waren dan ook niet in balans. Ik had liever meer ruimte boven het bed en minder onder het bed.</li>
-                    </ul>  
-               </p>
-            </article> 
-            <p>
-              <img width="300" height="300" src="before_bed_garage.jpg" alt="Before: oude bed opstelling"/>
-              <a href="after_bed_lounge_garage.jpg" target="_blank">Nieuwe Indeling</a>
-              <br>
-              <a href="About.html"><h4>Alles (nou ja, alles...) over mij kun je hier lezen</h4></a>
-            </p>
-         </main>
-         <footer><h5>&copy;2021 - CTC creations</h5>
-         </footer>
-       </body>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>My Vantures 2.0</title>
+</head>
+
+<body>
+  <header>
+    <h1>Out With The Old, In With The New</h1>
+  </header>
+  <nav class="orange-background">
+    <ul>
+      <li>
+        <a href="shop.html">
+          <h4>Shop</h4>
+        </a>
+      </li>
+      <li>
+        <a href="gallery.html">
+          <h4>Gallery</h4>
+        </a>
+      </li>
+      <li>
+        <a href="About.html">
+          <h4>About</h4>
+        </a>
+      </li>
+      <li>
+        <a href="blog.html">
+          <h4>Blog</h4>
+        </a>
+      </li>
+      <li>
+        <a href="index.html">
+          <h4>Home</h4>
+        </a>
+      </li>    
+    </ul>
+  </nav>
+  <hr>
+  <main>
+    <article>
+      <h2>Een nieuwe indeling na een jaar full-time wonen</h2>
+      <p>In juni was de bus af en is vanaf dat moment mijn huis en thuis, middenin de zomer dus
+        perfect
+        om vanlife te ontdekken. In september trok ik een aantal weken door Spanje samen met een vriendin en
+        zeker toen, merkte ik dat ik mijn indeling toch niet helemaal ideaal vond.<br><br>
+        Dit is waarom:
+        <br>
+      <ul>
+        <li>Het vaste bed is ideaal als het gaat om gebruiksgemak, maar het neemt ook de helft van de ruimte in
+          beslag, waardoor je leefgedeelte erg klein is.</li>
+        <li>Het blokkeerd licht en je uitzicht naar achter.</li>
+        <li>Daarnaast had ik gedacht dat ik de ruimte onder het bed veel meer nodig zou hebben, maar het blijkt
+          dat ik helemaal niet zoveel spullen heb om daar op de bergen. De verhouding onder en boven het bed
+          waren dan ook niet in balans. Ik had liever meer ruimte boven het bed en minder onder het bed.</li>
+      </ul>
+      </p>
+    </article>
+    <p>
+      <img class="photo" width="300" height="300" src="before_bed_garage.jpg" alt="Before: oude bed opstelling" />
+      <a href="after_bed_lounge_garage.jpg" target="_blank">Nieuwe Indeling</a>
+      <br>
+      <a href="About.html">
+        <p class="over">Alles (nou ja, alles...) over mij kun je hier lezen</p>
+      </a>
+    </p>
+  </main>
+  <footer>
+    <p>&copy;2021 - CTC creations</p>
+  </footer>
+</body>
+
 </html>
